--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ if (NOT DEFINED CMAKE_TOOLCHAIN_FILE)
     set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_LIST_DIR}/coralmicro/cmake/toolchain-arm-none-eabi-gcc.cmake)
 endif()
 
-project(coralmicro-app)
+project(pipeline_detection)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -13,10 +13,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 include_directories(coralmicro)
 add_subdirectory(coralmicro)
 
-add_executable_m7(coralmicro-app
-        main.cc
-)
-
-target_link_libraries(coralmicro-app
-        libs_base-m7_freertos
-)
+add_subdirectory(main)
