--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(src)
 include_directories(
         ${PROJECT_SOURCE_DIR}/include
         ${PROJECT_SOURCE_DIR}/src
+        ${PROJECT_SOURCE_DIR}/models
 )
