update file paths

--- a/main/src/CMakeLists.txt
+++ b/main/src/CMakeLists.txt
@@ -15,9 +15,9 @@ file(GLOB all_m4_src
 add_executable_m7(pipeline_detection
         ${all_m7_src}
         DATA
-        ${PROJECT_SOURCE_DIR}/main/models/yamnet_test_audio.bin>/yamnet_test_audio.bin
-        ${PROJECT_SOURCE_DIR}/main/models/${model_name}>/${model_name}
-        ${PROJECT_SOURCE_DIR}/main/web/coral_micro_camera.html>/coral_micro_camera.html
+        ${CMAKE_CURRENT_SOURCE_DIR}/../main/models/yamnet_test_audio.bin>/yamnet_test_audio.bin
+        ${CMAKE_CURRENT_SOURCE_DIR}/../main/models/${model_name}>/${model_name}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../main/web/coral_micro_camera.html>/coral_micro_camera.html
         M4_EXECUTABLE
         pipeline_detection_m4
 )
