--- a/main/src/CMakeLists.txt
+++ b/main/src/CMakeLists.txt
@@ -3,17 +3,15 @@ include_directories(${PROJECT_SOURCE_DIR}/main/include)
 set(model_name yamnet_spectra_in.tflite)
 
 file(GLOB all_m7_src
-        "${PROJECT_SOURCE_DIR}/main/include/*.h"
         "${PROJECT_SOURCE_DIR}/main/src/m7_*.cc"
 )
 
 file(GLOB all_m4_src
-        "${PROJECT_SOURCE_DIR}/main/include/*.h"
         "${PROJECT_SOURCE_DIR}/main/src/m4_*.cc"
 )
 
 add_executable_m7(pipeline_detection
-        ${all_m7_src}
+        m7_main.cc
         DATA
         ${PROJECT_SOURCE_DIR}/main/models/yamnet_test_audio.bin>/yamnet_test_audio.bin
         ${PROJECT_SOURCE_DIR}/main/models/${model_name}>/${model_name}
@@ -31,11 +29,7 @@ target_link_libraries(pipeline_detection
 )
 
 add_executable_m4(pipeline_detection_m4
-        ${all_m4_src}
-)
-
-target_include_directories(pipeline_detection_m4 PUBLIC
-    ${PROJECT_SOURCE_DIR}/coralmicro/third_party/tflite-micro
+        m4_main.cc
 )
 
 target_link_libraries(pipeline_detection_m4
